--- a/README.rdoc
+++ b/README.rdoc
@@ -1,18 +1,9 @@
 = cheeseburgers_ruby
 
-Description goes here.
+Código do artigo "Cheeseburgers, Decorators e Ruby" que mostra um exemplo de Decorator Pattern utilizando Ruby.
+http://prodis.pro.br/2009/09/13/cheeseburgers-decorators-e-ruby
 
-== Note on Patches/Pull Requests
- 
-* Fork the project.
-* Make your feature addition or bug fix.
-* Add tests for it. This is important so I don't break it in a
-  future version unintentionally.
-* Commit, do not mess with rakefile, version, or history.
-  (if you want to have your own version, that is fine but
-   bump version in a commit by itself I can ignore when I pull)
-* Send me a pull request. Bonus points for topic branches.
+== Autoria
 
-== Copyright
-
-Copyright (c) 2009 Prodis. See LICENSE for details.
+Prodis a.k.a. Fernando Hamasaki de Amorim
+http://prodis.pro.br
